--- a/Exercicios/desafio12/index.html
+++ b/Exercicios/desafio12/index.html
@@ -12,7 +12,7 @@
         <p><a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Por Milton Duarte</a></p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -25,7 +25,7 @@
     </section>
 
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -39,7 +39,7 @@
 
 
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -72,7 +72,7 @@
     </section>
 
 
-    <section>
+    <section class="imagem">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
