--- a/Exercicios/desafio12/index.html
+++ b/Exercicios/desafio12/index.html
@@ -25,7 +25,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -72,7 +72,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
