--- a/Exercicios/ex023/tabela001.html
+++ b/Exercicios/ex023/tabela001.html
@@ -11,19 +11,15 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
-
-        tr.linha {
-            background-color: gray;
         }
 
         td {
             border: 1px solid black;
             padding: 8px;
-        }
-        td.dado {
-            background-color: yellow;
+            text-align: center; /* alinhamento horizontal */
+            vertical-align: middle;
         }
     </style>
 </head>
@@ -45,7 +41,7 @@
         <td>B1</td>
         <td>C1</td>
         </tr>
-        <tr class="linha">
+        <tr>
         <td>A2</td>
         <td>B2</td>
         <td>C2</td>
@@ -57,7 +53,7 @@
         </tr>
         <tr>
         <td>A4</td>
-        <td class="dado">B4</td>
+        <td>B4</td>
         <td>C4</td>
         </tr>
     </table>
