--- a/Exercicios/ex024/iframe002.html
+++ b/Exercicios/ex024/iframe002.html
@@ -9,7 +9,9 @@
     <h1>Teste com Iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, quibusdam. Cumque ea dicta totam temporibus itaque minus quae ex. Natus dolores tempore dolor similique magnam, voluptates numquam sapiente consequatur eligendi.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador nao e compativel com isso.</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere in esse, voluptatibus minima id ipsam hic sunt fuga nostrum harum praesentium ut? Soluta reprehenderit magni eaque at et ullam nostrum.</p>
 
