--- a/Exercicios/ex026/mq005/index.html
+++ b/Exercicios/ex026/mq005/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opcao 1</a></li>
                 <li><a href="#">Opcao 2</a></li>
@@ -30,6 +31,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi facere velit quos! Ab, veniam illo ipsum tempore voluptatibus numquam cumque, error fugit neque obcaecati delectus veritatis quaerat, assumenda perferendis accusantium. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque nobis fugiat quaerat quidem saepe, deserunt sequi odit minus voluptatem itaque nesciunt corrupti ullam labore nisi accusamus temporibus perferendis, officia cumque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo impedit rerum dolores. Unde odio officia maxime voluptates cum? Corrupti vel tempore dignissimos modi eos amet? Placeat quo quasi error eligendi.</p>
         </article>
     </main>
-    
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block';
+            }
+
+        }
+    </script>
 </body>
 </html>
