Estudos de flexbox

--- a/Exercicios/ex027/flex004/index.html
+++ b/Exercicios/ex027/flex004/index.html
@@ -9,13 +9,14 @@
             background-color: lightsalmon;
 
             display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-between;
         }
 
         div.item {
             background-color: lightblue;
             border: 1px solid black;
             text-align: center;
-            flex: auto;
         }
 
     </style>
